# xviewlite

./: .gitattributes  .gitignore  conda_list_ws2.txt  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py
xview/: xview.py
xviewlite/: _version.py  xview.py  xviewlite_setup.sh
xviewlite/dialogs/: BasicDialogs.py  FileMetadataDialog.py  MetadataDialog.py
xviewlite/elements/: figure_update.py
xviewlite/spectra_db/: db_io.py
xviewlite/structure_data/Cu/mp-30/: ATOMS  HEADER  PARAMETERS  POTENTIALS  atoms.json  feff.inp  feff.pad  geom.json  libpotph.json  phase.pad  pot.json  pot.pad  xsect.json
xviewlite/structure_data/Fe/mp-150/: ATOMS  HEADER  PARAMETERS  POTENTIALS  atoms.json  feff.inp  feff.pad  geom.json  libpotph.json  phase.pad  pot.json  pot.pad  xsect.json
xviewlite/structure_data/FeN/mp-6988/: ATOMS  HEADER  PARAMETERS  POTENTIALS  atoms.json  feff.inp  feff.pad  geom.json  libpotph.json  phase.pad  pot.json  pot.pad  xsect.json
xviewlite/structure_data/FeO/mp-18905/: ATOMS  atoms.json  feff.inp  feff.pad  geom.json  libpotph.json  phase.pad  pot.pad  xsect.json
xviewlite/ui/: ui_shell.ui  ui_xfit.ui  ui_xview-mac.ui  ui_xview.ui  ui_xview_project.ui
xviewlite/widgets/: widget_xview_data.py  widget_xview_databroker.py  widget_xview_project.py  widget_xview_rixs.py  widget_xview_stats.py  widget_xview_wip.py  widget_xview_xfit.py
xviewlite/xfit_classes/: lightshow_pymatgen_bug_fix.py  plotting_tools.py  shell_widget.py  utils.py  workers.py
